--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </li>
           </ul>
         </nav>
+
         <address class="address">
           <ul class="address-list">
             <li class="address-list-contacts">
@@ -53,9 +54,98 @@
             </li>
           </ul>
         </address>
+
+        <button class="mob-button" type="button">
+          <svg class="mob-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
+      <!-- #region mobile menu -->
+      <div class="mobile-menu">
+        <div class="container mobile-menu-container">
+          <button
+            class="mobile-menu-close"
+            type="button"
+            aria-label="Close menu"
+          >
+            <svg class="icon-close-button" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-blutton"></use>
+            </svg>
+          </button>
+
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-nav-list">
+              <li class="mobile-nav-item">
+                <a
+                  class="mobile-nav-link mobile-nav-link-studio"
+                  href="./index.html"
+                  >Studio</a
+                >
+              </li>
+              <li class="mobile-nav-item">
+                <a class="mobile-nav-link" href="">Portfolio</a>
+              </li>
+              <li class="mobile-nav-item">
+                <a class="mobile-nav-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mobile-menu-address">
+            <ul class="mobile-menu-address-list">
+              <li class="mobile-menu-address-item">
+                <a class="mobile-address-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mobile-menu-address-item">
+                <a
+                  class="mobile-address-link mobile-address-link-tel"
+                  href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+
+          <div>
+            <ul class="mobile-social-list">
+              <li class="mobile-socmedia-list-item">
+                <a class="mobile-socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socmedia-list-item">
+                <a class="mobile-socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socmedia-list-item">
+                <a class="mobile-socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mobile-socmedia-list-item">
+                <a class="mobile-socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- #endregion mobile menu -->
     </header>
     <!-- #endregion header -->
+
     <main>
       <!-- #region Hero -->
 
@@ -500,7 +590,8 @@
     </footer>
     <!-- #endregion Footer -->
     <!-- #region Modal -->
-    <div class="modal-backdrop is-open" data-modal>
+    <!-- <div class="modal-backdrop is-open" -->
+    <div class="modal-backdrop" data-modal>
       <div class="modal-window">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
