--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
           </ul>
         </address>
 
-        <button class="mob-button" type="button">
-          <svg class="mob-icon" width="24" height="24">
+        <button class="burger-button" type="button">
+          <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
+
       <!-- #region mobile menu -->
-      <div class="mobile-menu">
+      <div class="mobile-menu hidden">
         <div class="container mobile-menu-container">
           <button
             class="mobile-menu-close"
@@ -149,7 +150,7 @@
     <main>
       <!-- #region Hero -->
 
-      <section class="hero">
+      <section class="hero hidden">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
@@ -159,7 +160,7 @@
       <!-- #endregion Hero -->
       <!-- #region Features -->
 
-      <section class="features">
+      <section class="features hidden">
         <div class="container features-container">
           <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list">
@@ -221,7 +222,7 @@
 
       <!-- #region Team -->
 
-      <section class="team">
+      <section class="team hidden">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -405,7 +406,7 @@
 
       <!-- #region Portfolio -->
 
-      <section class="portfolio">
+      <section class="portfolio hidden">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -517,7 +518,7 @@
       <!-- #endregion Portfolio -->
     </main>
     <!-- #region Footer -->
-    <footer class="footer">
+    <footer class="footer hidden">
       <div class="container footer-container">
         <div class="footer-left">
           <a class="logo footer-logo" href="./index.html"
@@ -591,7 +592,7 @@
     <!-- #endregion Footer -->
     <!-- #region Modal -->
     <!-- <div class="modal-backdrop is-open" -->
-    <div class="modal-backdrop" data-modal>
+    <div class="modal-backdrop hidden" data-modal>
       <div class="modal-window">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
