--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </ul>
         </address>
 
-        <button class="burger-button" type="button">
+        <button class="burger-button" type="button" data-menu-open>
           <svg class="burger-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-menu"></use>
           </svg>
@@ -63,13 +63,9 @@
       </div>
 
       <!-- #region mobile menu -->
-      <div class="mobile-menu hidden">
+      <div class="mobile-menu is-open" data-menu>
         <div class="container mobile-menu-container">
-          <button
-            class="mobile-menu-close"
-            type="button"
-            aria-label="Close menu"
-          >
+          <button class="mobile-menu-close" type="button" data-menu-close>
             <svg class="icon-close-button" width="8" height="8">
               <use href="./images/icons.svg#icon-close-blutton"></use>
             </svg>
@@ -78,11 +74,7 @@
           <nav class="mobile-menu-nav">
             <ul class="mobile-nav-list">
               <li class="mobile-nav-item">
-                <a
-                  class="mobile-nav-link mobile-nav-link-studio"
-                  href="./index.html"
-                  >Studio</a
-                >
+                <a class="mobile-nav-link" href="./index.html">Studio</a>
               </li>
               <li class="mobile-nav-item">
                 <a class="mobile-nav-link" href="">Portfolio</a>
@@ -591,8 +583,7 @@
     </footer>
     <!-- #endregion Footer -->
     <!-- #region Modal -->
-    <!-- <div class="modal-backdrop is-open" -->
-    <div class="modal-backdrop hidden" data-modal>
+    <div class="modal-backdrop is-open hidden" data-modal>
       <div class="modal-window">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
@@ -690,5 +681,8 @@
       </div>
     </div>
     <!-- #endregion Modal -->
+
+    <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
