--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <main>
       <!-- #region Hero -->
 
-      <section class="hero hidden">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-button" type="button">Order Service</button>
@@ -152,7 +152,7 @@
       <!-- #endregion Hero -->
       <!-- #region Features -->
 
-      <section class="features hidden">
+      <section class="features">
         <div class="container features-container">
           <h2 class="features-title visually-hidden">Features</h2>
           <ul class="features-list">
