--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
       <!-- #region Team -->
 
-      <section class="team hidden">
+      <section class="team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -398,7 +398,7 @@
 
       <!-- #region Portfolio -->
 
-      <section class="portfolio hidden">
+      <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
