--- a/index.html
+++ b/index.html
@@ -510,52 +510,53 @@
       <!-- #endregion Portfolio -->
     </main>
     <!-- #region Footer -->
-    <footer class="footer hidden">
+    <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-left">
-          <a class="logo footer-logo" href="./index.html"
-            >Web<span class="white">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <div class="footer-all">
+          <div class="footer-left">
+            <a class="logo footer-logo" href="./index.html"
+              >Web<span class="white">Studio</span></a
+            >
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
 
-        <div class="footer-center">
-          <p class="footer-list-title">Social media</p>
-          <ul class="footer-list">
-            <li class="footer-list-item">
-              <a class="socmedia-list-link" href="">
-                <svg class="svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="socmedia-list-link" href="">
-                <svg class="svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="socmedia-list-link" href="">
-                <svg class="svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="footer-list-item">
-              <a class="socmedia-list-link" href="">
-                <svg class="svg" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="footer-center">
+            <p class="footer-list-title">Social media</p>
+            <ul class="footer-list">
+              <li class="footer-list-item">
+                <a class="socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a class="socmedia-list-link" href="">
+                  <svg class="svg" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-
         <!-- #region Footer Subscribe -->
         <div class="footer-subscribe-container">
           <p class="footer-subscribe-title">Subscribe</p>
