--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     </footer>
     <!-- #endregion Footer -->
     <!-- #region Modal -->
-    <div class="modal-backdrop is-open hidden" data-modal>
+    <div class="modal-backdrop is-open" data-modal>
       <div class="modal-window">
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
