--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <!-- #region mobile menu -->
-      <div class="mobile-menu is-open" data-menu>
+      <div class="mobile-menu" data-menu>
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close" type="button" data-menu-close>
             <svg class="icon-close-button" width="8" height="8">
@@ -404,7 +404,26 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-items">
               <div class="container-info">
-                <img src="./images/card-1.jpg" alt="Banking App" width="360" />
+                <picture>
+                  <source
+                    srcset="./images/card-1.jpg 1x, ./images/card-1x2.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/card-1.jpg 1x, ./images/card-1x2.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/card-1.jpg 1x, ./images/card-1x2.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/card-1.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
+
                 <p class="overlay text-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -418,11 +437,26 @@
             </li>
             <li class="portfolio-list-items">
               <div class="container-info">
-                <img
-                  src="./images/card-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/card-2.jpg 1x, ./images/card-2x2.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/card-2.jpg 1x, ./images/card-2x2.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/card-2.jpg 1x, ./images/card-2x2.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/card-2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                </picture>
+
                 <p class="overlay text-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -436,11 +470,26 @@
             </li>
             <li class="portfolio-list-items">
               <div class="container-info">
-                <img
-                  src="./images/card-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                />
+                <picture>
+                  <source
+                    srcset="./images/card-3.jpg 1x, ./images/card-3x2.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/card-3.jpg 1x, ./images/card-3x2.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/card-3.jpg 1x, ./images/card-3x2.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/card-3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                </picture>
+
                 <p class="overlay text-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -454,7 +503,26 @@
             </li>
             <li class="portfolio-list-items">
               <div class="container-info">
-                <img src="./images/card-4.jpg" alt="Taxi Service" width="360" />
+                <picture>
+                  <source
+                    srcset="./images/card-4.jpg 1x, ./images/card-4x2.jpg 2x"
+                    media="(min-width: 1158px)"
+                  />
+                  <source
+                    srcset="./images/card-4.jpg 1x, ./images/card-4x2.jpg 2x"
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="./images/card-4.jpg 1x, ./images/card-4x2.jpg 2x"
+                    media="(max-width: 767px)"
+                  />
+                  <img
+                    src="./images/card-4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                </picture>
+
                 <p class="overlay text-info">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
