--- a/index.html
+++ b/index.html
@@ -219,12 +219,26 @@
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-card">
-              <img
-                class="images-team"
-                src="./images/mark.jpg"
-                alt="Mark Guerrero"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="./images/mark.jpg 1x, ./images/mark2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="./images/mark.jpg 1x, ./images/mark2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/mark.jpg 1x, ./images/mark2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="images-team"
+                  src="./images/mark.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                />
+              </picture>
               <div class="container-team-info">
                 <h3 class="team-list-title">Mark Guerrero</h3>
                 <p class="team-card-text">Product Designer</p>
@@ -262,12 +276,26 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                class="images-team"
-                src="./images/tom.jpg"
-                alt="Tom Ford"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="./images/tom.jpg 1x, ./images/tom2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="./images/tom.jpg 1x, ./images/tom2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/tom.jpg 1x, ./images/tom2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="images-team"
+                  src="./images/tom.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                />
+              </picture>
               <div class="container-team-info">
                 <h3 class="team-list-title">Tom Ford</h3>
                 <p class="team-card-text">Frontend Developer</p>
@@ -305,12 +333,26 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                class="images-team"
-                src="./images/camila.jpg"
-                alt="Camila Garcia"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="./images/camila.jpg 1x, ./images/camila.jpg 2x"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="./images/camila.jpg 1x, ./images/camila.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/camila.jpg 1x, ./images/camila.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="images-team"
+                  src="./images/camila.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                />
+              </picture>
               <div class="container-team-info">
                 <h3 class="team-list-title">Camila Garcia</h3>
                 <p class="team-card-text">Marketing</p>
@@ -348,12 +390,26 @@
               </div>
             </li>
             <li class="team-card">
-              <img
-                class="images-team"
-                src="./images/daniel.jpg"
-                alt="Daniel Wilson"
-                width="264"
-              />
+              <picture>
+                <source
+                  srcset="./images/daniel.jpg 1x, ./images/daniel2x.jpg 2x"
+                  media="(min-width: 1158px)"
+                />
+                <source
+                  srcset="./images/daniel.jpg 1x, ./images/daniel2x.jpg 2x"
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="./images/daniel.jpg 1x, ./images/daniel2x.jpg 2x"
+                  media="(max-width: 767px)"
+                />
+                <img
+                  class="images-team"
+                  src="./images/daniel.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                />
+              </picture>
               <div class="container-team-info">
                 <h3 class="team-list-title">Daniel Wilson</h3>
                 <p class="team-card-text">UI Designer</p>
