--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
 
       <!-- #region mobile menu -->
-      <div class="mobile-menu" data-menu>
+      <div class="mobile-menu is-open" data-menu>
         <div class="container mobile-menu-container">
           <button class="mobile-menu-close" type="button" data-menu-close>
             <svg class="icon-close-button" width="8" height="8">
@@ -710,6 +710,7 @@
     <!-- #region Modal -->
     <div class="modal-backdrop is-open" data-modal>
       <div class="modal-window">
+        <button type="button" data-modal-open></button>
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="modal-close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-blutton"></use>
